--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # Core LangChain packages
-langchain>=0.1.0,<0.3.0
-langchain-community>=0.0.20,<0.3.0
-langchain-openai>=0.0.5,<0.3.0
-langchain-neo4j>=0.0.1,<0.3.0
+# Using 0.2.x versions for compatibility (langchain 0.1.x conflicts with langchain-community 0.0.20+)
+langchain>=0.2.0,<0.3.0
+langchain-community>=0.2.0,<0.3.0
+langchain-openai>=0.2.0,<0.3.0
+langchain-neo4j>=0.1.0,<0.3.0
 
 # Database
 neo4j>=5.0.0,<6.0.0
