--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core LangChain packages
-# Using 0.2.x versions for compatibility (langchain 0.1.x conflicts with langchain-community 0.0.20+)
-langchain>=0.2.0,<0.3.0
+# Pinned so langchain and langchain-community stay compatible (community requires matching langchain min)
+langchain>=0.2.17,<0.3.0
 langchain-community>=0.2.0,<0.3.0
 langchain-openai>=0.2.0,<0.3.0
 langchain-neo4j>=0.1.0,<0.3.0
