--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[project]
+name = "graphrag"
+requires-python = ">=3.10,<3.13"
+description = "Graph RAG system with Neo4j and Telegram bot"
+
 [tool.black]
 line-length = 100
 target-version = ['py310', 'py311']
@@ -56,7 +61,6 @@ module = [
     "langchain.*",
     "langchain_community.*",
     "langchain_openai.*",
-    "langchain_neo4j.*",
     "telegram.*",
     "neo4j.*",
     "structlog.*",
