--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# Core LangChain stack - EXACT pins (langchain 0.2.x + openai 0.1.x use langchain-core<0.3; openai 0.2.x needs core>=0.3)
-langchain-core==0.2.43
-langchain==0.2.17
-langchain-community==0.2.19
-langchain-openai==0.1.20
-langchain-neo4j==0.1.0
+# Core LangChain packages
+# Versions are pinned via: constraints-langchain.txt
+langchain>=0.2.0,<0.3.0
+langchain-core>=0.2.0,<0.3.0
+langchain-community>=0.2.0,<0.3.0
+langchain-openai>=0.1.0,<0.2.0
 
 # Database
 neo4j>=5.0.0,<6.0.0
